# image-processing

./: README.md
TP_I2/: CMakeLists.txt
TP_I2/apps/: CMakeLists.txt  cam_video.cpp  colourproc.cpp  display.cpp  filtering.cpp  morphology.cpp  pointproc.cpp  segmentation.cpp
TP_I2/src/: improcfuncs.cpp  improcfuncs.h  termcolor.hpp
